syntax = "proto3";

option csharp_namespace = "lib.bifrost";

package cache;

service Cache {
  rpc Get (GetRequest) returns (GetReply);
  rpc Refresh (RefreshRequest) returns (RefreshReply);
  rpc Remove (RemoveRequest) returns (RemoveReply);
  rpc Set (SetRequest) returns (SetReply);
  rpc List (ListRequest) returns (ListReply);
}

message GetRequest {
  string key = 1;
  string cache = 2;
}

message GetReply {
  bool hasValue = 2;
  bytes value = 1;
}

message RefreshRequest {
  string key = 1;
  string cache = 2;
}

message RefreshReply {
}

message RemoveRequest {
  string key = 1;
  string cache = 2;
}

message RemoveReply {
}

message SetRequest {
  string key = 1;
  bytes value = 2;
  CacheOptions cacheOptions = 3;
  string cache = 4;
}

message SetReply {
}

message ListRequest {
  string cache = 1;
}

message ListReply {
  repeated string keys = 1;
}

message CacheOptions {
  string AbsoluteExpiration = 1;
  string AbsoluteExpirationRelativeToNow = 2;
  string SlidingExpiration = 3;
}
